# BiShgengCLanguage

./: 404.html  README.md  build.sh  index.html  print.html  searcher-09f2665d.js  searchindex-276776bd.js  split_manual.py  translate-sync.sh
.gitee/: PULL_REQUEST_TEMPLATE.md
.gitee/ISSUE_TEMPLATE/: DTS.yml  bug.yml  feature.yml  refactor.yml
.github/workflows/: publish-manual.yml  translate-en.yml
appendix/: 01-keywords.html  02-grammar.html  index.html
chapter-1-getting-started/: 1-build.html  2-hello-bsc.html  index.html
chapter-2-development-efficiency/: 1-member-functions.html  2-generic.html  3-constexpr.html  4-trait.html  5-operator-overloading.html  index.html
chapter-3-memory-safety/: 1-ownership.html  2-borrowing.html  3-nonnull-pointer.html  4-owned-struct.html  5-safe-zone.html  6-initial-analysis.html  index.html
chapter-4-concurrency/: 1-stackless-coroutine.html  index.html
chapter-5-toolchain/: 1-bsc2c.html  2-debugging.html  3-ide.html  index.html
chapter-6-standard-library/: 1-safe-api.html  2-safe-container.html  3-smart-pointer.html  4-coroutine-scheduler.html  5-network-library.html  index.html
clang/: CMakeLists.txt
clang-tools-extra/clang-doc/: Generators.cpp  YAMLGenerator.cpp
clang-tools-extra/clang-tidy/: ClangTidy.cpp  ClangTidy.h  ClangTidyForceLinker.h
clang-tools-extra/clang-tidy/bsc/: AccessSpecificTypeCheck.cpp  AccessSpecificTypeCheck.h  AddNewFieldCheck.cpp  AddNewFieldCheck.h  BSCTidyModule.cpp  CMakeLists.txt  ExplicitCastCheck.cpp  ExplicitCastCheck.h
clang-tools-extra/clang-tidy/tool/: ClangTidyMain.cpp
clang-tools-extra/clangd/: HeuristicResolver.cpp  XRefs.cpp
clang-tools-extra/clangd/refactor/: Rename.cpp
clang-tools-extra/clangd/unittests/: RenameTests.cpp  TypeHierarchyTests.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang/docs/: BiShengCLanguageUserManual.md
clang/docs/BSC/: BiShengCLanguageUserManual.md  bsc-errors.md
clang/lib/AST/: ASTContext.cpp  ASTDiagnostic.cpp  ASTDumper.cpp  ASTImporter.cpp  ASTStructuralEquivalence.cpp  CMakeLists.txt  Comment.cpp  Decl.cpp  DeclBSC.cpp  DeclBase.cpp  DeclCXX.cpp  DeclPrinter.cpp  DeclTemplate.cpp  DeclarationName.cpp  Expr.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  JSONNodeDumper.cpp  Mangle.cpp  MicrosoftMangle.cpp  NSAPI.cpp  ODRHash.cpp  RecordLayoutBuilder.cpp  Stmt.cpp  StmtPrinter.cpp  StmtProfile.cpp  TextNodeDumper.cpp  Type.cpp  TypeLoc.cpp  TypePrinter.cpp
clang/lib/ASTMatchers/: ASTMatchFinder.cpp
clang/lib/Analysis/: BSCBorrowCheck.cpp  (+5 more)
clang/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
en/: 404.html  index.html  print.html  searcher-09f2665d.js  searchindex-62b5e970.js  toc-a156a4de.js
en/appendix/: 01-keywords.html  02-grammar.html  index.html
en/chapter-1-getting-started/: 1-build.html  2-hello-bsc.html  index.html
en/chapter-2-development-efficiency/: 1-member-functions.html  2-generic.html  3-constexpr.html  4-trait.html  5-operator-overloading.html  index.html
en/chapter-3-memory-safety/: 1-ownership.html  2-borrowing.html  3-nonnull-pointer.html  4-owned-struct.html  5-safe-zone.html  6-initial-analysis.html  index.html
en/chapter-4-concurrency/: 1-stackless-coroutine.html  index.html
en/chapter-5-toolchain/: 1-bsc2c.html  2-debugging.html  3-ide.html  index.html
en/chapter-6-standard-library/: 1-safe-api.html  2-safe-container.html  3-smart-pointer.html  4-coroutine-scheduler.html  5-network-library.html  index.html
en/preview/: 404.html  index.html  print.html  searcher-09f2665d.js  searchindex-5788e8c0.js  toc.html
en/theme/: lang-switch-2820517c.js
libcbs/: CMakeLists.txt
libcbs/src/: CMakeLists.txt
libcbs/src/bishengc_safety/: bishengc_safety.cbs  bishengc_safety.hbs
libcbs/src/cell/: cell.hbs
libcbs/src/demo/: f1.cbs  f1.hbs
libcbs/src/hash/: sip.cbs  sip.hbs
libcbs/src/list/: list.hbs
libcbs/src/map/: hash_map.hbs
libcbs/src/net/: net.cbs  net.hbs
libcbs/src/option/: option.hbs
libcbs/src/raw_table/: raw_table.cbs  raw_table.hbs
libcbs/src/raw_vec/: raw_vec.hbs
libcbs/src/rc/: rc.hbs
libcbs/src/result/: result.hbs
libcbs/src/scheduler/: scheduler.cbs  scheduler.hbs
libcbs/src/slice/: slice.hbs
libcbs/src/string/: string.cbs  string.hbs
libcbs/src/vec/: vec.hbs
libcbs/test/: CMakeLists.txt
libcbs/test/bishengc_safety/: bishengc_safety_test.cbs
libcbs/test/bsc_list/: test_list.cbs
libcbs/test/cell/: refcell_deref.cbs  refcell_try_borrow.cbs
libcbs/test/demo/: test.cbs
libcbs/test/list/: CMakeLists.txt  test_list.cbs
libcbs/test/map/: test_map.cbs
libcbs/test/net/: CMakeLists.txt  test_net.cbs
libcbs/test/rc/: rc_deref.cbs  rc_or_weak_is_field_in_struct.cbs  ref_count_check.cbs  weak_circular_reference.cbs  weak_tree.cbs  weak_upgrade.cbs
libcbs/test/scheduler/: lit.local.cfg  scheduler_test.cbs
libcbs/test/slice/: CMakeLists.txt  slice_test.cbs
libcbs/test/string/: string_test.cbs
libcbs/test/vec/: CMakeLists.txt  destructor-nested-templates-with-vec.cbs  vec_test.cbs
overlay/: TRANSLATION_GUIDE.md  book.en.toml  book.zh.toml  custom.css
overlay/en/: .translated-from
overlay/en-preview/: .translated-from
preview/: 404.html  index.html  print.html  searcher-09f2665d.js  searchindex-26674c87.js  toc-2f02e48b.js  toc.html
preview/appendix/: 01-keywords.html  02-grammar.html  index.html
preview/chapter-1-getting-started/: 1-build.html  2-hello-bsc.html  index.html
preview/chapter-2-development-efficiency/: 1-member-functions.html  2-generic.html  3-constexpr.html  4-trait.html  5-operator-overloading.html  index.html
preview/chapter-3-memory-safety/: 1-ownership.html  2-borrowing.html  3-nonnull-pointer.html  4-owned-struct.html  5-safe-zone.html  6-initial-analysis.html  index.html
preview/chapter-4-concurrency/: 1-stackless-coroutine.html  index.html
preview/chapter-5-toolchain/: 1-bsc2c.html  2-debugging.html  3-ide.html  index.html
preview/chapter-6-standard-library/: 1-safe-api.html  2-safe-container.html  3-smart-pointer.html  4-coroutine-scheduler.html  5-network-library.html  index.html
(+2078 files in other folders)
